--- a/hw6/css/homepage.css
+++ b/hw6/css/homepage.css
@@ -3,11 +3,12 @@
 body {
     border: rgb(30, 30, 30) solid 2px;
     border-radius: 16px;
-    padding: 70px;
+    padding: 40px;
 } /* Fix for header being a bit of a derp. */
 
 #header {
-    background-color: rgb(100, 100, 100);
+    background-color: rgb(200,200,200);
+    padding-top: 10px;
     padding-bottom: 80px;
     /*border: 3px solid #73AD21;*/
 }
@@ -17,7 +18,7 @@ body {
     right: 50px;
     width: 300px;
     /*border: 3px solid #73AD21;*/
-    padding: 0px;
+    padding: 20px;
 }
 
 #info {
